stopped texts on overview pages from clipping with buttons

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,10 @@
 /********** VARS ************/
 
 :root {
-  --mm-sidebar-collapsed-size: 60px !important;
-  --mm-iconbar-size:0 !important;
-  --mm-sidebar-expanded-size: 350px;
-  --navbar-height: 76px;
+    --mm-sidebar-collapsed-size: 60px !important;
+    --mm-iconbar-size: 0 !important;
+    --mm-sidebar-expanded-size: 350px;
+    --navbar-height: 76px;
 }
 
 /**********************/
@@ -23,7 +23,6 @@
     background-size: cover;
 }
 
-
 .header__title {
     color: #ffffff;
     font-size: 3rem;
@@ -38,17 +37,16 @@
     width: 25px;
     height: 50px;
     margin: 0 15px;
-
     transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        /* IE 9 */
-        -moz-transform: rotate(0deg);
-        /* Firefox */
-        -webkit-transform: rotate(0deg);
-        /* Safari and Chrome */
-        -o-transform: rotate(0deg);
-        /* Opera */
-        transition: all 0.2s ease-out;
+    -ms-transform: rotate(0deg);
+    /* IE 9 */
+    -moz-transform: rotate(0deg);
+    /* Firefox */
+    -webkit-transform: rotate(0deg);
+    /* Safari and Chrome */
+    -o-transform: rotate(0deg);
+    /* Opera */
+    transition: all 0.2s ease-out;
 }
 
 .msp-app {
@@ -57,7 +55,7 @@
     margin-bottom: 50px;
 }
 
-.app-store-icon > img {
+.app-store-icon>img {
     height: 100%;
 }
 
@@ -67,9 +65,8 @@ div.msp-app-text {
 
 @media (min-width: 980px) {
     div.msp-app-text {
-        padding: 50px 0 0 70px; 
+        padding: 50px 0 0 70px;
     }
-
     .msp-app-text>p:first-of-type {
         margin-top: 20px;
         margin-bottom: 50px;
@@ -155,10 +152,14 @@ div.block {
     display: -webkit-flexbox;
     flex-direction: row;
 }
-
 .block-item-text {
-    height: 74px;
-    /* lines height * 3 */
+    height: 111px;
+}
+
+@media screen and (min-width: 1200px) {
+    .block-item-text {
+        height: 74px;
+    }
 }
 
 .remove-decoration {
@@ -237,21 +238,21 @@ ol.breadcrumb {
 /**********************/
 
 .mm-searchfield__input {
-  margin: 0 10px;
+    margin: 0 10px;
 }
 
 .mm-searchfield input {
-  background: url(/icons/Search.svg) no-repeat scroll 16px 5px;
-  padding-left: 50px;
-  height: 50px;
-  background-size: 20px 35px;
-  background-color: #ffffff;
-  border: 1px solid red;
+    background: url(/icons/Search.svg) no-repeat scroll 16px 5px;
+    padding-left: 50px;
+    height: 50px;
+    background-size: 20px 35px;
+    background-color: #ffffff;
+    border: 1px solid red;
 }
 
 .mm-navbars_top * {
-  background-color: #f9f9f9;
-  padding: 5px 0;
+    background-color: #f9f9f9;
+    padding: 5px 0;
 }
 
 .search-form-input {
@@ -282,6 +283,7 @@ ol.breadcrumb {
 #mm-0 .mm-listitem:after, #mm-1 .mm-listitem:after {
     left: 0;
 }
+
 .mm-listitem:after {
     left: 60px;
 }
@@ -361,7 +363,6 @@ ol.breadcrumb {
 .toc>.toc-list li {
     list-style: none;
 }
-
 
 a.toc-link {
     color: currentColor;
@@ -647,7 +648,7 @@ ul.navbar-nav.ml-auto {
 
 /* intergration manual layout*/
 
-.manual h2, .manual h3, .manual  h4 {
+.manual h2, .manual h3, .manual h4 {
     border-top: 1px solid rgba(0, 0, 0, 0.1);
     padding-top: 15px;
 }
@@ -726,6 +727,7 @@ ul.navbar-nav.ml-auto {
 .mm-menu_iconpanel .mm-panels>.mm-panel:not(.mm-panel_iconpanel-first):not(.mm-panel_iconpanel-0) {
     left: var(--mm-sidebar-collapsed-size)
 }
+
 .mm-panel_opened-parent .mm-panel__blocker {
     opacity: 0.0 !important;
 }
@@ -736,76 +738,71 @@ ul.navbar-nav.ml-auto {
     border-radius: 6px;
     border: 1px solid rgb(0, 0, 0, 0.1) !important;
 }
-#search-input:focus{
+
+#search-input:focus {
     outline: none;
 }
 
-  
 /*** page shadow ***/
-#page::before {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  content: "";
-  display: block;
-  width: 20px;
-  height: 100%;
-  position: absolute;
-  right: 100%;
-  z-index: 100;
-  clip-path: polygon(30px 0, 30px 100%, 19px 100%, 19px 0);
-  -webkit-clip-path: polygon(30px 0, 30px 100%, 19px 100%, 19px 0);
 
+#page::before {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    content: "";
+    display: block;
+    width: 20px;
+    height: 100%;
+    position: absolute;
+    right: 100%;
+    z-index: 100;
+    clip-path: polygon(30px 0, 30px 100%, 19px 100%, 19px 0);
+    -webkit-clip-path: polygon(30px 0, 30px 100%, 19px 100%, 19px 0);
 }
 
 body, html {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 nav.navbar {
-  position: sticky;
-  top: 0;
-  z-index: 50;
-  height: var(--navbar-height);
+    position: sticky;
+    top: 0;
+    z-index: 50;
+    height: var(--navbar-height);
 }
 
 div.sticky-with-menu {
-  top: calc(var(--navbar-height) + 15px);
-  z-index: 0;
-  height: 25px;
-  position: sticky;
-  display: none;
+    top: calc(var(--navbar-height) + 15px);
+    z-index: 0;
+    height: 25px;
+    position: sticky;
+    display: none;
 }
 
 @media screen and (min-width: 768px) {
-  div.sticky-with-menu {
-    display: block;
-  }
+    div.sticky-with-menu {
+        display: block;
+    }
 }
 
-.js-toc-content h1, 
-.js-toc-content h2,
-.js-toc-content h3,
-.js-toc-content h4,
-.js-toc-content h5,
-.js-toc-content h6 {
+.js-toc-content h1, .js-toc-content h2, .js-toc-content h3, .js-toc-content h4, .js-toc-content h5, .js-toc-content h6 {
     scroll-margin-top: var(--navbar-height);
 }
 
 @-moz-document url-prefix() {
-
-.js-toc-content h1::before, .js-toc-content h2::before, .js-toc-content h3::before, .js-toc-content h4::before, .js-toc-content h5::before, .js-toc-content h6::before {
-    display: block;
-    content: " ";
-    height: var(--navbar-height);
-    margin-top: calc(var(--navbar-height) * -1);
-    visibility: hidden;
-  }
+    .js-toc-content h1::before, .js-toc-content h2::before, .js-toc-content h3::before, .js-toc-content h4::before, .js-toc-content h5::before, .js-toc-content h6::before {
+        display: block;
+        content: " ";
+        height: var(--navbar-height);
+        margin-top: calc(var(--navbar-height) * -1);
+        visibility: hidden;
+    }
 }
 
 .js-toc-content {
-  margin-top: -1.5rem;
+    margin-top: -1.5rem;
 }
-.mm-menu_iconpanel .mm-panels > .mm-panel:not(.mm-panel_iconpanel-first):not(.mm-panel_iconpanel-0) {
+
+.mm-menu_iconpanel .mm-panels>.mm-panel:not(.mm-panel_iconpanel-first):not(.mm-panel_iconpanel-0) {
     left: var(--mm-sidebar-collapsed-size)
 }
 
@@ -822,7 +819,7 @@ div#results a:hover {
     color: #3fa9f5;
 }
 
-#search-results > * {
+#search-results>* {
     padding: 12px 10px 12px 20px;
     text-align: left;
     font-size: 1rem;
@@ -831,7 +828,7 @@ div#results a:hover {
 }
 
 .manual-code {
-	width: 100%;
+    width: 100%;
     display: block;
     background-color: #f9f9f9;
 }
@@ -849,8 +846,16 @@ div#results a:hover {
 }
 
 /* safari fixes*/
+
 .navbar {
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
